syntax = "proto3";

option go_package = "./v1";

service Auth {
  rpc Login (LoginRequest) returns (LoginResponse) {}
  rpc AuthToken (AuthTokenRequest) returns (AuthTokenResponse) {}
  rpc LoginApi (LoginService) returns (LoginResponse) {}
  rpc AuthApi (AuthTokenService) returns (AuthTokenResponse) {}
  rpc RegisterService (Register) returns (RegisterResponse){}
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginService {
  string service = 1;
  string serviceConn = 2;
  string apiToken = 3;
}

message LoginResponse {
  string acessToken = 1;
}

message AuthTokenRequest {
  string acessToken = 1;
}

message AuthTokenService {
  string service = 1;
  string serviceConn = 2;
  string acessToken = 3;
}

message AuthTokenResponse {
  int64 id = 1;
  bool authorize= 2;
}

message Register {
  string service = 1;
}

message RegisterResponse {
  string apiToken = 1;
}